fix: alignment fix

--- a/src/components/Menu Package/MenuPkg.css
+++ b/src/components/Menu Package/MenuPkg.css
@@ -64,7 +64,9 @@ div.menu_package_container .section2 h4 {
 
 div.menu_package_container .section2 .container {
   overflow: scroll;
-  max-height: calc(100% - 150px);
+  max-height: calc(100% - 100px);
+  margin: 30px 0;
+  overflow-y: scroll;
 }
 .logo_web {
   display: block;
